# clube_saber

./: .dockerignore  .gitignore  Dockerfile  Procfile  docker-compose.yaml  entrypoint.sh  gunicorn.conf.py  manage.py  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yaml  ci.yaml  deploy.yaml  docker.yaml  poetry.yaml
clube_saber/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
clube_saber/apps/core/: types.py
clube_saber/apps/product/: apps.py  urls.py
clube_saber/apps/product/admin/: __init__.py  product_admin.py
clube_saber/apps/product/models/: product.py
clube_saber/apps/product/views/: items_list.py
clube_saber/apps/tenant/: admin.py  apps.py  models.py
clube_saber/apps/tenant/migrations/: 0001_initial.py
clube_saber/apps/web/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
clube_saber/apps/web/admin/: __init__.py  (+4 more)
clube_saber/scripts/: create_schemas.py
clube_saber/templates/: index.html  navigation.html
clube_saber/templates/admin/: base.html
clube_saber/templates/cards/: pricing.html
clube_saber/templates/sections/: image_section.html  text_section.html
explorer2go/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
explorer2go/apps/product/: apps.py
explorer2go/apps/tenant/: admin.py  apps.py  models.py  storage.py
explorer2go/apps/web/: apps.py  urls.py  views.py
explorer2go/scripts/: create_schemas.py
explorer2go/templates/: index.html  navigation.html
explorer2go/templates/cards/: file_view.html  pricing.html
explorer2go/templates/forms/: lead_contact.html
explorer2go/templates/sections/: image_section.html  text_section.html
infra/: .gitignore  docker-compose.yaml  main.tf
tests/: locustfile.py  settings.py  test_application.py
(+47 files in other folders)
